AST/OSQL.java
/* Generated By:JavaCC: Do not edit this line. OSQL.java */
package whu.oddb.parser;
import java.util.ArrayList;


public class OSQL implements OSQLConstants {

  final public AST start() throws ParseException {
    AST ast;
    if (jj_2_1(2)) {
      ast = create_class();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CREATE:
        ast = create_select_deputy();
        break;
      case SELECT:
        ast = select_from();
        break;
      case DELETE:
        ast = delete_from();
        break;
      case UPDATE:
        ast = update_class();
        break;
      case INSERT:
        ast = insert_into();
        break;
      case DROP:
        ast = drop_class();
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
        {if (true) return ast;}
    throw new Error("Missing return statement in function");
  }

  final public String value() throws ParseException {
        Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT_VALUE:
    case FLOAT_VALUE:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT_VALUE:
        t = jj_consume_token(INT_VALUE);
        break;
      case FLOAT_VALUE:
        t = jj_consume_token(FLOAT_VALUE);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                {if (true) return t.image;}
      break;
    case STRING_VALUE:
    case CHAR_VALUE:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHAR_VALUE:
        t = jj_consume_token(CHAR_VALUE);
        break;
      case STRING_VALUE:
        t = jj_consume_token(STRING_VALUE);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
        {if (true) return t.image.substring(1,t.image.length()-1);}
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public CreateClass create_class() throws ParseException {
        Token className;
        ArrayList<RealAttr> cols;
    jj_consume_token(CREATE);
    jj_consume_token(CLASS);
    className = jj_consume_token(ID);
    jj_consume_token(LP);
    cols = rel_attr_list();
    jj_consume_token(RP);
    jj_consume_token(SEMI);
                {if (true) return new CreateClass(className.image, cols);}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<RealAttr> rel_attr_list() throws ParseException {
        Token id;
        Token type;
        ArrayList<RealAttr> cols = new ArrayList<RealAttr>();
    id = jj_consume_token(ID);
    type = jj_consume_token(TYPE);
                             cols.add(new RealAttr(id.image,type.image));
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_1;
      }
      jj_consume_token(COMMA);
      id = jj_consume_token(ID);
      type = jj_consume_token(TYPE);
                                             if(type.image == "char")type.image="string";cols.add(new RealAttr(id.image,type.image));
    }
                {if (true) return cols;}
    throw new Error("Missing return statement in function");
  }

  final public DropClass drop_class() throws ParseException {
        Token className;
    jj_consume_token(DROP);
    jj_consume_token(CLASS);
    className = jj_consume_token(ID);
    jj_consume_token(SEMI);
                {if (true) return new DropClass(className.image);}
    throw new Error("Missing return statement in function");
  }

  final public InsertClass insert_into() throws ParseException {
        Token className;
        ArrayList<String> attrs;
        ArrayList<String> values;
    jj_consume_token(INSERT);
    jj_consume_token(INTO);
    className = jj_consume_token(ID);
    jj_consume_token(LP);
    attrs = attr_list();
    jj_consume_token(RP);
    jj_consume_token(VALUES);
    jj_consume_token(LP);
    values = value_list();
    jj_consume_token(RP);
    jj_consume_token(SEMI);
                {if (true) return new InsertClass(className.image, attrs, values);}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<String> attr_list() throws ParseException {
        Token curAttr; //��һ��id
        ArrayList<String> attrs;
    curAttr = jj_consume_token(ID);
                     attrs = new ArrayList(); attrs.add(curAttr.image);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      curAttr = jj_consume_token(ID);
                                                                                               attrs.add(curAttr.image);
    }
                {if (true) return attrs;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<String> value_list() throws ParseException {
        String curValue;
        ArrayList<String> values;
    curValue = value();
                     values = new ArrayList();values.add(curValue);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      curValue = value();
                                                                                               values.add(curValue);
    }
                {if (true) return values;}
    throw new Error("Missing return statement in function");
  }

  final public UpdateClass update_class() throws ParseException {
        String value;
        Token className;
        ArrayList<String> attrs = new ArrayList();
        ArrayList<String> values = new ArrayList();
        Token attr;
        ExprNode whereClause;
    jj_consume_token(UPDATE);
    className = jj_consume_token(ID);
    jj_consume_token(SET);
    attr = jj_consume_token(ID);
                                                 attrs.add(attr.image);
    jj_consume_token(EQ);
    value = value();
                                                                                            values.add(value);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      attr = jj_consume_token(ID);
                                                                                                                                    attrs.add(attr.image);
      jj_consume_token(EQ);
      value = value();
                                                                                                                                                                               values.add(value);
    }
    jj_consume_token(WHERE);
    whereClause = condition();
    jj_consume_token(SEMI);
                {if (true) return new UpdateClass(className.image, attrs, values, whereClause);}
    throw new Error("Missing return statement in function");
  }

  final public DeleteFrom delete_from() throws ParseException {
        Token className;
        ExprNode whereClause;
    jj_consume_token(DELETE);
    jj_consume_token(FROM);
    className = jj_consume_token(ID);
    jj_consume_token(WHERE);
    whereClause = condition();
    jj_consume_token(SEMI);
                {if (true) return new DeleteFrom(className.image, (ConditionExprNode)whereClause);}
    throw new Error("Missing return statement in function");
  }

  final public SelectFrom select_from() throws ParseException {
        ArrayList<AttrContext> attr_list = new ArrayList();
        AttrContext attr;
        Token className;
        ExprNode whereClause;
    jj_consume_token(SELECT);
    attr = attribute();
                                  attr_list.add(attr);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      attr = attribute();
                                                                                  attr_list.add(attr);
    }
    jj_consume_token(FROM);
    className = jj_consume_token(ID);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHERE:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_6;
      }
      jj_consume_token(WHERE);
      whereClause = condition();
                                         {if (true) return new SelectFrom(className.image, attr_list, (ConditionExprNode)whereClause);}
    }
    jj_consume_token(SEMI);
                whereClause = new ConditionExprNode("=",new ValueNode("int","1"),new ValueNode("int", "1"));
                {if (true) return new SelectFrom(className.image, attr_list, (ConditionExprNode)whereClause);}
    throw new Error("Missing return statement in function");
  }

  final public SelectDeputyFrom select_deputy_from() throws ParseException {
        ArrayList<DeputyAttr> attr_list;
        Token className;
        ExprNode whereClause;
    jj_consume_token(SELECT);
    attr_list = switch_list();
    jj_consume_token(FROM);
    className = jj_consume_token(ID);
    jj_consume_token(WHERE);
    whereClause = condition();
    jj_consume_token(SEMI);
                {if (true) return new SelectDeputyFrom(className.image, attr_list, (ConditionExprNode)whereClause);}
    throw new Error("Missing return statement in function");
  }

  final public CreateSelectDeputy create_select_deputy() throws ParseException {
        ArrayList<RealAttr> realAttrs = new ArrayList<RealAttr>();
        ArrayList<DeputyAttr> deputyAttrs;
        Token className;
        Token originClass;
        SelectDeputyFrom deputyInfo;
    jj_consume_token(CREATE);
    jj_consume_token(SELECTDEPUTY);
    className = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LP:
      jj_consume_token(LP);
      realAttrs = rel_attr_list();
      jj_consume_token(RP);
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    deputyInfo = select_deputy_from();
                {if (true) return new CreateSelectDeputy(className.image, deputyInfo.className, deputyInfo.attrs, realAttrs, deputyInfo.whereClause);}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<DeputyAttr> switch_list() throws ParseException {
        ExprNode switchRule; //�����ѯ�Ļ������switchrule�Ͳ����Ǽ�����ˣ�ֻ��һ��attr���͵�valueNode����ָ��һ��attrContext
        Token name;
        DeputyAttr attr;
        ArrayList<DeputyAttr> attr_list = new ArrayList();
    switchRule = computation();
                                 attr = new DeputyAttr("no name","no class", switchRule); attr_list.add(attr);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AS:
      jj_consume_token(AS);
      name = jj_consume_token(ID);
                                                                                                                                attr.name = name.image;
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_7;
      }
      jj_consume_token(COMMA);
      switchRule = computation();
                                                          attr = new DeputyAttr("no name","no class", switchRule);attr_list.add(attr);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AS:
        jj_consume_token(AS);
        name = jj_consume_token(ID);
                                                                                                                                                        attr.name = name.image;
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
    }
                {if (true) return attr_list;}
    throw new Error("Missing return statement in function");
  }

  final public ExprNode condition() throws ParseException {
        ExprNode expr;
    expr = or_condition();
                {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  final public ExprNode or_condition() throws ParseException {
        ExprNode expr1;
        ExprNode expr2;
    expr1 = and_condition();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_8;
      }
      jj_consume_token(OR);
      expr2 = and_condition();
                                                         expr1 = new ConditionExprNode("OR",expr1, expr2);
    }
        {if (true) return expr1;}
    throw new Error("Missing return statement in function");
  }

  final public ExprNode and_condition() throws ParseException {
        ExprNode expr1;
        ExprNode expr2;
    expr1 = not_condition();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_9;
      }
      jj_consume_token(AND);
      expr2 = not_condition();
                                                          expr1 = new ConditionExprNode("AND",expr1, expr2);
    }
        {if (true) return expr1;}
    throw new Error("Missing return statement in function");
  }

  final public ExprNode not_condition() throws ParseException {
        ExprNode expr;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LP:
    case ID:
    case INT_VALUE:
    case FLOAT_VALUE:
    case STRING_VALUE:
    case CHAR_VALUE:
      expr = compare_condition();
                {if (true) return expr;}
      break;
    case NOT:
      jj_consume_token(NOT);
      expr = compare_condition();
                {if (true) return new ConditionExprNode("NOT", expr, null);}
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ExprNode compare_condition() throws ParseException {
        ExprNode expr1;
        ExprNode expr2;
        Token cop;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LP:
      jj_consume_token(LP);
      expr1 = or_condition();
      jj_consume_token(RP);
                {if (true) return expr1;}
      break;
    case ID:
    case INT_VALUE:
    case FLOAT_VALUE:
    case STRING_VALUE:
    case CHAR_VALUE:
      expr1 = atom_condition();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMPARE_OP:
        cop = jj_consume_token(COMPARE_OP);
        break;
      case EQ:
        cop = jj_consume_token(EQ);
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      expr2 = atom_condition();
                {if (true) return new ConditionExprNode(cop.image, expr1, expr2);}
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ExprNode atom_condition() throws ParseException {
        Token v;
        AttrContext attr;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING_VALUE:
      v = jj_consume_token(STRING_VALUE);
                {if (true) return new ValueNode("string",v.image.substring(1,v.image.length()-1));}
      break;
    case CHAR_VALUE:
      v = jj_consume_token(CHAR_VALUE);
                {if (true) return new ValueNode("char",v.image.substring(1,2));}
      break;
    case INT_VALUE:
      v = jj_consume_token(INT_VALUE);
                {if (true) return new ValueNode("int",v.image);}
      break;
    case FLOAT_VALUE:
      v = jj_consume_token(FLOAT_VALUE);
                {if (true) return new ValueNode("float",v.image);}
      break;
    case ID:
      attr = attribute();
                {if (true) return new ValueNode("attr", attr);}
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ExprNode computation() throws ParseException {
        ExprNode expr;
    expr = additive_expression();
                {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  final public ExprNode additive_expression() throws ParseException {
        ExprNode expr1;
        ExprNode expr2;
    expr1 = multitive_expression();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 41:
      case 42:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 41:
        jj_consume_token(41);
        expr2 = multitive_expression();
                                                                   expr1 = new ComputeExprNode("+",expr1, expr2);
        break;
      case 42:
        jj_consume_token(42);
        expr2 = multitive_expression();
                                                                    expr1 = new ComputeExprNode("-",expr1, expr2);
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
        {if (true) return expr1;}
    throw new Error("Missing return statement in function");
  }

  final public ExprNode multitive_expression() throws ParseException {
        ExprNode expr1;
        ExprNode expr2;
    expr1 = primary_number();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 43:
      case 44:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 43:
        jj_consume_token(43);
        expr2 = primary_number();
                                                         expr1 = new ComputeExprNode("*",expr1, expr2);
        break;
      case 44:
        jj_consume_token(44);
        expr2 = primary_number();
                                                          expr1 = new ComputeExprNode("/",expr1, expr2);
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
        {if (true) return expr1;}
    throw new Error("Missing return statement in function");
  }
